# sysinfo

./: README.md  dune  dune-project  sysinfo.ml
lib_sysinfo/: dune  os.mli  package.ml  packages.mli  process.ml  processes.mli  services.mli  users.mli
lib_sysinfo/linux/: README.md  dune  os.ml  packages.ml  processes.ml  services.ml  users.ml
lib_sysinfo/linux/internal/: dune  group.ml
lib_sysinfo/macos/: README.md  dune  packages.ml  packages_test.ml  processes.ml  services.ml
lib_sysinfo/macos/c_es/: README.md  es.ml
lib_sysinfo/macos/tests/: packages_test.ml
lib_sysinfo/windows/: dune  os.ml  packages.ml  processes.ml  services.ml  users.ml
lib_sysinfo/windows/internal/: dune  registry.ml
lib_sysinfo_linux/: dune  processes.ml  services.ml
lib_sysinfo_macos/: dune  packages.ml  packages_impl.ml  packages_test.ml
lib_sysinfo_macos/c_es/: dune  entitlements.xml  es.ml  es.mli
lib_sysinfo_macos/c_plist_xml/: c_plist_xml.ml  dune
lib_sysinfo_macos/c_plist_xml/c_lib/: PlistToXMLConverter.m
lib_sysinfo_macos/tests/: dune  packages_test.ml
