(rule
 (enabled_if
  (= %{system} "macosx"))
 (deps
  (source_tree c_lib))
 (targets libPlistToXMLConverter.a dllPlistToXMLConverter.so)
 (action
  (no-infer
   (progn
    (chdir
     c_lib
     (run
      clang
      -c
      -o
      libPlistToXMLConverter.a
      PlistToXMLConverter.m
      -I/usr/include/objc))
    (chdir
     c_lib
     (run
      clang
      -shared
      -o
      libPlistToXMLConverter.so
      PlistToXMLConverter.m
      -I/usr/include/objc
      -framework
      Foundation))
    (copy c_lib/libPlistToXMLConverter.a libPlistToXMLConverter.a)
    (copy c_lib/libPlistToXMLConverter.so dllPlistToXMLConverter.so)))))

(library
 (name c_plist_xml)
 (enabled_if
  (= %{system} "macosx"))
 (libraries ctypes ctypes.foreign)
 (foreign_archives PlistToXMLConverter)
 (c_library_flags -framework Foundation))
